--- a/pom.xml
+++ b/pom.xml
@@ -62,7 +62,8 @@
         <myfaces.version>2.3.10</myfaces.version>
         <mysql.version>8.0.31</mysql.version>
         <poi.version>5.2.2</poi.version>
-        <primefaces.extensions.version>8.0.5</primefaces.extensions.version>
+        <primefaces.version>12.0.0</primefaces.version>
+        <primefaces.extensions.version>12.0.11</primefaces.extensions.version>
         <saxon.version>9.9.1-8</saxon.version>
         <log4j.version>2.19.0</log4j.version>
         <junit.version>5.9.2</junit.version>
@@ -618,6 +619,11 @@ from system library in Java 11+ -->
                 <groupId>org.passay</groupId>
                 <artifactId>passay</artifactId>
                 <version>1.6.2</version>
+            </dependency>
+            <dependency>
+                <groupId>org.primefaces</groupId>
+                <artifactId>primefaces</artifactId>
+                <version>${primefaces.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.primefaces.extensions</groupId>
